--- a/package.json
+++ b/package.json
@@ -130,7 +130,6 @@
     "arg": "^5.0.1",
     "bumpp": "^7.1.1",
     "caller-path": "^3.0.0",
-    "chalk": "^4.1.0",
     "color-string": "^1.9.0",
     "cross-env": "^7.0.3",
     "diff": "^5.0.0",
@@ -144,6 +143,7 @@
     "mini-svg-data-uri": "^1.4.3",
     "minimatch": "^3.0.4",
     "nyc": "^15.1.0",
+    "picocolors": "^1.0.0",
     "pirates": "^4.0.4",
     "rollup": "^2.61.1",
     "sucrase": "^3.20.3",
