--- a/test/processor/__snapshots__/interpret.test.ts.yml
+++ b/test/processor/__snapshots__/interpret.test.ts.yml
@@ -152,31 +152,6 @@ Tools / interpret important / important / 0: |-
     --tw-text-opacity: 1 !important;
     color: rgba(110, 231, 183, var(--tw-text-opacity)) !important;
   }
-Tools / interpret outline / outline / 0: |-
-  .outline-none {
-    outline: 2px solid transparent;
-    outline-offset: 2px;
-  }
-  .outline-black {
-    outline: 2px dotted rgb(0, 0, 0);
-    outline-offset: 2px;
-  }
-  .outline-solid-black {
-    outline: 2px solid rgba(0, 0, 0, var(--tw-outline-opacity, 1));
-    outline-offset: 2px;
-  }
-  .outline-dotted-white {
-    outline: 2px dotted rgba(255, 255, 255, var(--tw-outline-opacity, 1));
-    outline-offset: 2px;
-  }
-  .outline-solid-red-200 {
-    outline: 2px solid rgba(254, 202, 202, var(--tw-outline-opacity, 1));
-    outline-offset: 2px;
-  }
-  .outline-dotted-red-200 {
-    outline: 2px dotted rgba(254, 202, 202, var(--tw-outline-opacity, 1));
-    outline-offset: 2px;
-  }
 Tools / interpret screen variants / screen variants / 0: |-
   @media (min-width: 768px) {
     .md\:p-1 {
@@ -381,8 +356,7 @@ Tools / interpret square brackets / square brackets / 0: |-
     opacity: var(--opacity);
   }
   .outline-\[var\(--outline\)\] {
-    outline: 2px dotted rgb(var(--outline));
-    outline-offset: 2px;
+    outline-color: var(--outline);
   }
   .p-\[30em\] {
     padding: 30em;
