--- a/test/utils/__snapshots__/completions.test.ts.yml
+++ b/test/utils/__snapshots__/completions.test.ts.yml
@@ -3490,6 +3490,10 @@ Tools / completions / dynamic / 1: |-
     "border-b-${size}",
     "border-l-${int}",
     "border-l-${size}",
+    "border-x-${int}",
+    "border-x-${size}",
+    "border-y-${int}",
+    "border-y-${size}",
     "border-opacity-${int<=100}",
     "divide-y-${int}",
     "divide-x-${int}",
