feat: add default colors provided by Tailwind CSS v3

--- a/test/plugin/__snapshots__/typography.test.ts.yml
+++ b/test/plugin/__snapshots__/typography.test.ts.yml
@@ -8,6 +8,10 @@ Tools / add completions / completions / 0: |-
       "prose-2xl",
       "prose-light",
       "prose-dark",
+      "prose-slate",
+      "prose-zinc",
+      "prose-neutral",
+      "prose-stone",
       "prose-red",
       "prose-yellow",
       "prose-green",
