--- a/test/utils/__snapshots__/completions.test.ts.yml
+++ b/test/utils/__snapshots__/completions.test.ts.yml
@@ -25,6 +25,16 @@ Tools / completions / color / 2: |-
     "text-dark-900",
     "text-black",
     "text-white",
+    "text-slate-50",
+    "text-slate-100",
+    "text-slate-200",
+    "text-slate-300",
+    "text-slate-400",
+    "text-slate-500",
+    "text-slate-600",
+    "text-slate-700",
+    "text-slate-800",
+    "text-slate-900",
     "text-gray-50",
     "text-gray-100",
     "text-gray-200",
@@ -35,6 +45,36 @@ Tools / completions / color / 2: |-
     "text-gray-700",
     "text-gray-800",
     "text-gray-900",
+    "text-zinc-50",
+    "text-zinc-100",
+    "text-zinc-200",
+    "text-zinc-300",
+    "text-zinc-400",
+    "text-zinc-500",
+    "text-zinc-600",
+    "text-zinc-700",
+    "text-zinc-800",
+    "text-zinc-900",
+    "text-neutral-50",
+    "text-neutral-100",
+    "text-neutral-200",
+    "text-neutral-300",
+    "text-neutral-400",
+    "text-neutral-500",
+    "text-neutral-600",
+    "text-neutral-700",
+    "text-neutral-800",
+    "text-neutral-900",
+    "text-stone-50",
+    "text-stone-100",
+    "text-stone-200",
+    "text-stone-300",
+    "text-stone-400",
+    "text-stone-500",
+    "text-stone-600",
+    "text-stone-700",
+    "text-stone-800",
+    "text-stone-900",
     "text-red-50",
     "text-red-100",
     "text-red-200",
@@ -280,6 +320,16 @@ Tools / completions / color / 2: |-
     "placeholder-dark-900",
     "placeholder-black",
     "placeholder-white",
+    "placeholder-slate-50",
+    "placeholder-slate-100",
+    "placeholder-slate-200",
+    "placeholder-slate-300",
+    "placeholder-slate-400",
+    "placeholder-slate-500",
+    "placeholder-slate-600",
+    "placeholder-slate-700",
+    "placeholder-slate-800",
+    "placeholder-slate-900",
     "placeholder-gray-50",
     "placeholder-gray-100",
     "placeholder-gray-200",
@@ -290,6 +340,36 @@ Tools / completions / color / 2: |-
     "placeholder-gray-700",
     "placeholder-gray-800",
     "placeholder-gray-900",
+    "placeholder-zinc-50",
+    "placeholder-zinc-100",
+    "placeholder-zinc-200",
+    "placeholder-zinc-300",
+    "placeholder-zinc-400",
+    "placeholder-zinc-500",
+    "placeholder-zinc-600",
+    "placeholder-zinc-700",
+    "placeholder-zinc-800",
+    "placeholder-zinc-900",
+    "placeholder-neutral-50",
+    "placeholder-neutral-100",
+    "placeholder-neutral-200",
+    "placeholder-neutral-300",
+    "placeholder-neutral-400",
+    "placeholder-neutral-500",
+    "placeholder-neutral-600",
+    "placeholder-neutral-700",
+    "placeholder-neutral-800",
+    "placeholder-neutral-900",
+    "placeholder-stone-50",
+    "placeholder-stone-100",
+    "placeholder-stone-200",
+    "placeholder-stone-300",
+    "placeholder-stone-400",
+    "placeholder-stone-500",
+    "placeholder-stone-600",
+    "placeholder-stone-700",
+    "placeholder-stone-800",
+    "placeholder-stone-900",
     "placeholder-red-50",
     "placeholder-red-100",
     "placeholder-red-200",
@@ -535,6 +615,16 @@ Tools / completions / color / 2: |-
     "bg-dark-900",
     "bg-black",
     "bg-white",
+    "bg-slate-50",
+    "bg-slate-100",
+    "bg-slate-200",
+    "bg-slate-300",
+    "bg-slate-400",
+    "bg-slate-500",
+    "bg-slate-600",
+    "bg-slate-700",
+    "bg-slate-800",
+    "bg-slate-900",
     "bg-gray-50",
     "bg-gray-100",
     "bg-gray-200",
@@ -545,6 +635,36 @@ Tools / completions / color / 2: |-
     "bg-gray-700",
     "bg-gray-800",
     "bg-gray-900",
+    "bg-zinc-50",
+    "bg-zinc-100",
+    "bg-zinc-200",
+    "bg-zinc-300",
+    "bg-zinc-400",
+    "bg-zinc-500",
+    "bg-zinc-600",
+    "bg-zinc-700",
+    "bg-zinc-800",
+    "bg-zinc-900",
+    "bg-neutral-50",
+    "bg-neutral-100",
+    "bg-neutral-200",
+    "bg-neutral-300",
+    "bg-neutral-400",
+    "bg-neutral-500",
+    "bg-neutral-600",
+    "bg-neutral-700",
+    "bg-neutral-800",
+    "bg-neutral-900",
+    "bg-stone-50",
+    "bg-stone-100",
+    "bg-stone-200",
+    "bg-stone-300",
+    "bg-stone-400",
+    "bg-stone-500",
+    "bg-stone-600",
+    "bg-stone-700",
+    "bg-stone-800",
+    "bg-stone-900",
     "bg-red-50",
     "bg-red-100",
     "bg-red-200",
@@ -790,6 +910,16 @@ Tools / completions / color / 2: |-
     "from-dark-900",
     "from-black",
     "from-white",
+    "from-slate-50",
+    "from-slate-100",
+    "from-slate-200",
+    "from-slate-300",
+    "from-slate-400",
+    "from-slate-500",
+    "from-slate-600",
+    "from-slate-700",
+    "from-slate-800",
+    "from-slate-900",
     "from-gray-50",
     "from-gray-100",
     "from-gray-200",
@@ -800,6 +930,36 @@ Tools / completions / color / 2: |-
     "from-gray-700",
     "from-gray-800",
     "from-gray-900",
+    "from-zinc-50",
+    "from-zinc-100",
+    "from-zinc-200",
+    "from-zinc-300",
+    "from-zinc-400",
+    "from-zinc-500",
+    "from-zinc-600",
+    "from-zinc-700",
+    "from-zinc-800",
+    "from-zinc-900",
+    "from-neutral-50",
+    "from-neutral-100",
+    "from-neutral-200",
+    "from-neutral-300",
+    "from-neutral-400",
+    "from-neutral-500",
+    "from-neutral-600",
+    "from-neutral-700",
+    "from-neutral-800",
+    "from-neutral-900",
+    "from-stone-50",
+    "from-stone-100",
+    "from-stone-200",
+    "from-stone-300",
+    "from-stone-400",
+    "from-stone-500",
+    "from-stone-600",
+    "from-stone-700",
+    "from-stone-800",
+    "from-stone-900",
     "from-red-50",
     "from-red-100",
     "from-red-200",
@@ -1045,6 +1205,16 @@ Tools / completions / color / 2: |-
     "via-dark-900",
     "via-black",
     "via-white",
+    "via-slate-50",
+    "via-slate-100",
+    "via-slate-200",
+    "via-slate-300",
+    "via-slate-400",
+    "via-slate-500",
+    "via-slate-600",
+    "via-slate-700",
+    "via-slate-800",
+    "via-slate-900",
     "via-gray-50",
     "via-gray-100",
     "via-gray-200",
@@ -1055,6 +1225,36 @@ Tools / completions / color / 2: |-
     "via-gray-700",
     "via-gray-800",
     "via-gray-900",
+    "via-zinc-50",
+    "via-zinc-100",
+    "via-zinc-200",
+    "via-zinc-300",
+    "via-zinc-400",
+    "via-zinc-500",
+    "via-zinc-600",
+    "via-zinc-700",
+    "via-zinc-800",
+    "via-zinc-900",
+    "via-neutral-50",
+    "via-neutral-100",
+    "via-neutral-200",
+    "via-neutral-300",
+    "via-neutral-400",
+    "via-neutral-500",
+    "via-neutral-600",
+    "via-neutral-700",
+    "via-neutral-800",
+    "via-neutral-900",
+    "via-stone-50",
+    "via-stone-100",
+    "via-stone-200",
+    "via-stone-300",
+    "via-stone-400",
+    "via-stone-500",
+    "via-stone-600",
+    "via-stone-700",
+    "via-stone-800",
+    "via-stone-900",
     "via-red-50",
     "via-red-100",
     "via-red-200",
@@ -1300,6 +1500,16 @@ Tools / completions / color / 2: |-
     "to-dark-900",
     "to-black",
     "to-white",
+    "to-slate-50",
+    "to-slate-100",
+    "to-slate-200",
+    "to-slate-300",
+    "to-slate-400",
+    "to-slate-500",
+    "to-slate-600",
+    "to-slate-700",
+    "to-slate-800",
+    "to-slate-900",
     "to-gray-50",
     "to-gray-100",
     "to-gray-200",
@@ -1310,6 +1520,36 @@ Tools / completions / color / 2: |-
     "to-gray-700",
     "to-gray-800",
     "to-gray-900",
+    "to-zinc-50",
+    "to-zinc-100",
+    "to-zinc-200",
+    "to-zinc-300",
+    "to-zinc-400",
+    "to-zinc-500",
+    "to-zinc-600",
+    "to-zinc-700",
+    "to-zinc-800",
+    "to-zinc-900",
+    "to-neutral-50",
+    "to-neutral-100",
+    "to-neutral-200",
+    "to-neutral-300",
+    "to-neutral-400",
+    "to-neutral-500",
+    "to-neutral-600",
+    "to-neutral-700",
+    "to-neutral-800",
+    "to-neutral-900",
+    "to-stone-50",
+    "to-stone-100",
+    "to-stone-200",
+    "to-stone-300",
+    "to-stone-400",
+    "to-stone-500",
+    "to-stone-600",
+    "to-stone-700",
+    "to-stone-800",
+    "to-stone-900",
     "to-red-50",
     "to-red-100",
     "to-red-200",
@@ -1555,6 +1795,16 @@ Tools / completions / color / 2: |-
     "border-dark-900",
     "border-black",
     "border-white",
+    "border-slate-50",
+    "border-slate-100",
+    "border-slate-200",
+    "border-slate-300",
+    "border-slate-400",
+    "border-slate-500",
+    "border-slate-600",
+    "border-slate-700",
+    "border-slate-800",
+    "border-slate-900",
     "border-gray-50",
     "border-gray-100",
     "border-gray-200",
@@ -1565,6 +1815,36 @@ Tools / completions / color / 2: |-
     "border-gray-700",
     "border-gray-800",
     "border-gray-900",
+    "border-zinc-50",
+    "border-zinc-100",
+    "border-zinc-200",
+    "border-zinc-300",
+    "border-zinc-400",
+    "border-zinc-500",
+    "border-zinc-600",
+    "border-zinc-700",
+    "border-zinc-800",
+    "border-zinc-900",
+    "border-neutral-50",
+    "border-neutral-100",
+    "border-neutral-200",
+    "border-neutral-300",
+    "border-neutral-400",
+    "border-neutral-500",
+    "border-neutral-600",
+    "border-neutral-700",
+    "border-neutral-800",
+    "border-neutral-900",
+    "border-stone-50",
+    "border-stone-100",
+    "border-stone-200",
+    "border-stone-300",
+    "border-stone-400",
+    "border-stone-500",
+    "border-stone-600",
+    "border-stone-700",
+    "border-stone-800",
+    "border-stone-900",
     "border-red-50",
     "border-red-100",
     "border-red-200",
@@ -1810,6 +2090,16 @@ Tools / completions / color / 2: |-
     "divide-dark-900",
     "divide-black",
     "divide-white",
+    "divide-slate-50",
+    "divide-slate-100",
+    "divide-slate-200",
+    "divide-slate-300",
+    "divide-slate-400",
+    "divide-slate-500",
+    "divide-slate-600",
+    "divide-slate-700",
+    "divide-slate-800",
+    "divide-slate-900",
     "divide-gray-50",
     "divide-gray-100",
     "divide-gray-200",
@@ -1820,6 +2110,36 @@ Tools / completions / color / 2: |-
     "divide-gray-700",
     "divide-gray-800",
     "divide-gray-900",
+    "divide-zinc-50",
+    "divide-zinc-100",
+    "divide-zinc-200",
+    "divide-zinc-300",
+    "divide-zinc-400",
+    "divide-zinc-500",
+    "divide-zinc-600",
+    "divide-zinc-700",
+    "divide-zinc-800",
+    "divide-zinc-900",
+    "divide-neutral-50",
+    "divide-neutral-100",
+    "divide-neutral-200",
+    "divide-neutral-300",
+    "divide-neutral-400",
+    "divide-neutral-500",
+    "divide-neutral-600",
+    "divide-neutral-700",
+    "divide-neutral-800",
+    "divide-neutral-900",
+    "divide-stone-50",
+    "divide-stone-100",
+    "divide-stone-200",
+    "divide-stone-300",
+    "divide-stone-400",
+    "divide-stone-500",
+    "divide-stone-600",
+    "divide-stone-700",
+    "divide-stone-800",
+    "divide-stone-900",
     "divide-red-50",
     "divide-red-100",
     "divide-red-200",
@@ -2065,6 +2385,16 @@ Tools / completions / color / 2: |-
     "ring-offset-dark-900",
     "ring-offset-black",
     "ring-offset-white",
+    "ring-offset-slate-50",
+    "ring-offset-slate-100",
+    "ring-offset-slate-200",
+    "ring-offset-slate-300",
+    "ring-offset-slate-400",
+    "ring-offset-slate-500",
+    "ring-offset-slate-600",
+    "ring-offset-slate-700",
+    "ring-offset-slate-800",
+    "ring-offset-slate-900",
     "ring-offset-gray-50",
     "ring-offset-gray-100",
     "ring-offset-gray-200",
@@ -2075,6 +2405,36 @@ Tools / completions / color / 2: |-
     "ring-offset-gray-700",
     "ring-offset-gray-800",
     "ring-offset-gray-900",
+    "ring-offset-zinc-50",
+    "ring-offset-zinc-100",
+    "ring-offset-zinc-200",
+    "ring-offset-zinc-300",
+    "ring-offset-zinc-400",
+    "ring-offset-zinc-500",
+    "ring-offset-zinc-600",
+    "ring-offset-zinc-700",
+    "ring-offset-zinc-800",
+    "ring-offset-zinc-900",
+    "ring-offset-neutral-50",
+    "ring-offset-neutral-100",
+    "ring-offset-neutral-200",
+    "ring-offset-neutral-300",
+    "ring-offset-neutral-400",
+    "ring-offset-neutral-500",
+    "ring-offset-neutral-600",
+    "ring-offset-neutral-700",
+    "ring-offset-neutral-800",
+    "ring-offset-neutral-900",
+    "ring-offset-stone-50",
+    "ring-offset-stone-100",
+    "ring-offset-stone-200",
+    "ring-offset-stone-300",
+    "ring-offset-stone-400",
+    "ring-offset-stone-500",
+    "ring-offset-stone-600",
+    "ring-offset-stone-700",
+    "ring-offset-stone-800",
+    "ring-offset-stone-900",
     "ring-offset-red-50",
     "ring-offset-red-100",
     "ring-offset-red-200",
@@ -2320,6 +2680,16 @@ Tools / completions / color / 2: |-
     "ring-dark-900",
     "ring-black",
     "ring-white",
+    "ring-slate-50",
+    "ring-slate-100",
+    "ring-slate-200",
+    "ring-slate-300",
+    "ring-slate-400",
+    "ring-slate-500",
+    "ring-slate-600",
+    "ring-slate-700",
+    "ring-slate-800",
+    "ring-slate-900",
     "ring-gray-50",
     "ring-gray-100",
     "ring-gray-200",
@@ -2330,6 +2700,36 @@ Tools / completions / color / 2: |-
     "ring-gray-700",
     "ring-gray-800",
     "ring-gray-900",
+    "ring-zinc-50",
+    "ring-zinc-100",
+    "ring-zinc-200",
+    "ring-zinc-300",
+    "ring-zinc-400",
+    "ring-zinc-500",
+    "ring-zinc-600",
+    "ring-zinc-700",
+    "ring-zinc-800",
+    "ring-zinc-900",
+    "ring-neutral-50",
+    "ring-neutral-100",
+    "ring-neutral-200",
+    "ring-neutral-300",
+    "ring-neutral-400",
+    "ring-neutral-500",
+    "ring-neutral-600",
+    "ring-neutral-700",
+    "ring-neutral-800",
+    "ring-neutral-900",
+    "ring-stone-50",
+    "ring-stone-100",
+    "ring-stone-200",
+    "ring-stone-300",
+    "ring-stone-400",
+    "ring-stone-500",
+    "ring-stone-600",
+    "ring-stone-700",
+    "ring-stone-800",
+    "ring-stone-900",
     "ring-red-50",
     "ring-red-100",
     "ring-red-200",
@@ -2575,6 +2975,16 @@ Tools / completions / color / 2: |-
     "outline-dark-900",
     "outline-black",
     "outline-white",
+    "outline-slate-50",
+    "outline-slate-100",
+    "outline-slate-200",
+    "outline-slate-300",
+    "outline-slate-400",
+    "outline-slate-500",
+    "outline-slate-600",
+    "outline-slate-700",
+    "outline-slate-800",
+    "outline-slate-900",
     "outline-gray-50",
     "outline-gray-100",
     "outline-gray-200",
@@ -2585,6 +2995,36 @@ Tools / completions / color / 2: |-
     "outline-gray-700",
     "outline-gray-800",
     "outline-gray-900",
+    "outline-zinc-50",
+    "outline-zinc-100",
+    "outline-zinc-200",
+    "outline-zinc-300",
+    "outline-zinc-400",
+    "outline-zinc-500",
+    "outline-zinc-600",
+    "outline-zinc-700",
+    "outline-zinc-800",
+    "outline-zinc-900",
+    "outline-neutral-50",
+    "outline-neutral-100",
+    "outline-neutral-200",
+    "outline-neutral-300",
+    "outline-neutral-400",
+    "outline-neutral-500",
+    "outline-neutral-600",
+    "outline-neutral-700",
+    "outline-neutral-800",
+    "outline-neutral-900",
+    "outline-stone-50",
+    "outline-stone-100",
+    "outline-stone-200",
+    "outline-stone-300",
+    "outline-stone-400",
+    "outline-stone-500",
+    "outline-stone-600",
+    "outline-stone-700",
+    "outline-stone-800",
+    "outline-stone-900",
     "outline-red-50",
     "outline-red-100",
     "outline-red-200",
@@ -2830,6 +3270,16 @@ Tools / completions / color / 2: |-
     "fill-dark-900",
     "fill-black",
     "fill-white",
+    "fill-slate-50",
+    "fill-slate-100",
+    "fill-slate-200",
+    "fill-slate-300",
+    "fill-slate-400",
+    "fill-slate-500",
+    "fill-slate-600",
+    "fill-slate-700",
+    "fill-slate-800",
+    "fill-slate-900",
     "fill-gray-50",
     "fill-gray-100",
     "fill-gray-200",
@@ -2840,6 +3290,36 @@ Tools / completions / color / 2: |-
     "fill-gray-700",
     "fill-gray-800",
     "fill-gray-900",
+    "fill-zinc-50",
+    "fill-zinc-100",
+    "fill-zinc-200",
+    "fill-zinc-300",
+    "fill-zinc-400",
+    "fill-zinc-500",
+    "fill-zinc-600",
+    "fill-zinc-700",
+    "fill-zinc-800",
+    "fill-zinc-900",
+    "fill-neutral-50",
+    "fill-neutral-100",
+    "fill-neutral-200",
+    "fill-neutral-300",
+    "fill-neutral-400",
+    "fill-neutral-500",
+    "fill-neutral-600",
+    "fill-neutral-700",
+    "fill-neutral-800",
+    "fill-neutral-900",
+    "fill-stone-50",
+    "fill-stone-100",
+    "fill-stone-200",
+    "fill-stone-300",
+    "fill-stone-400",
+    "fill-stone-500",
+    "fill-stone-600",
+    "fill-stone-700",
+    "fill-stone-800",
+    "fill-stone-900",
     "fill-red-50",
     "fill-red-100",
     "fill-red-200",
@@ -3086,6 +3566,16 @@ Tools / completions / color / 2: |-
     "stroke-dark-900",
     "stroke-black",
     "stroke-white",
+    "stroke-slate-50",
+    "stroke-slate-100",
+    "stroke-slate-200",
+    "stroke-slate-300",
+    "stroke-slate-400",
+    "stroke-slate-500",
+    "stroke-slate-600",
+    "stroke-slate-700",
+    "stroke-slate-800",
+    "stroke-slate-900",
     "stroke-gray-50",
     "stroke-gray-100",
     "stroke-gray-200",
@@ -3096,6 +3586,36 @@ Tools / completions / color / 2: |-
     "stroke-gray-700",
     "stroke-gray-800",
     "stroke-gray-900",
+    "stroke-zinc-50",
+    "stroke-zinc-100",
+    "stroke-zinc-200",
+    "stroke-zinc-300",
+    "stroke-zinc-400",
+    "stroke-zinc-500",
+    "stroke-zinc-600",
+    "stroke-zinc-700",
+    "stroke-zinc-800",
+    "stroke-zinc-900",
+    "stroke-neutral-50",
+    "stroke-neutral-100",
+    "stroke-neutral-200",
+    "stroke-neutral-300",
+    "stroke-neutral-400",
+    "stroke-neutral-500",
+    "stroke-neutral-600",
+    "stroke-neutral-700",
+    "stroke-neutral-800",
+    "stroke-neutral-900",
+    "stroke-stone-50",
+    "stroke-stone-100",
+    "stroke-stone-200",
+    "stroke-stone-300",
+    "stroke-stone-400",
+    "stroke-stone-500",
+    "stroke-stone-600",
+    "stroke-stone-700",
+    "stroke-stone-800",
+    "stroke-stone-900",
     "stroke-red-50",
     "stroke-red-100",
     "stroke-red-200",
