feat: new peer utility (#765)
Co-authored-by: Anthony Fu <anthonyfu117@hotmail.com>

--- a/test/processor/__snapshots__/variant.test.ts.yml
+++ b/test/processor/__snapshots__/variant.test.ts.yml
@@ -48,7 +48,6 @@ Tools / generate states / all / 0: |-
     "focus-visible": ".test:focus-visible {\n  background: #1C1C1E;\n}",
     "focus-within": ".test:focus-within {\n  background: #1C1C1E;\n}",
     "checked": ".test:checked {\n  background: #1C1C1E;\n}",
-    "not-checked": ".test:not(:checked) {\n  background: #1C1C1E;\n}",
     "default": ".test:default {\n  background: #1C1C1E;\n}",
     "disabled": ".test:disabled {\n  background: #1C1C1E;\n}",
     "enabled": ".test:enabled {\n  background: #1C1C1E;\n}",
@@ -60,25 +59,26 @@ Tools / generate states / all / 0: |-
     "placeholder-shown": ".test:placeholder-shown {\n  background: #1C1C1E;\n}",
     "read-only": ".test:read-only {\n  background: #1C1C1E;\n}",
     "read-write": ".test:read-write {\n  background: #1C1C1E;\n}",
-    "not-disabled": ".test:not(:disabled) {\n  background: #1C1C1E;\n}",
     "first-of-type": ".test:first-of-type {\n  background: #1C1C1E;\n}",
-    "not-first-of-type": ".test:not(:first-of-type) {\n  background: #1C1C1E;\n}",
     "last-of-type": ".test:last-of-type {\n  background: #1C1C1E;\n}",
+    "first": ".test:first {\n  background: #1C1C1E;\n}",
+    "last": ".test:last {\n  background: #1C1C1E;\n}",
+    "only-child": ".test:only-child {\n  background: #1C1C1E;\n}",
+    "only-of-type": ".test:only-of-type {\n  background: #1C1C1E;\n}",
+    "root": ".test:root {\n  background: #1C1C1E;\n}",
+    "empty": ".test:empty {\n  background: #1C1C1E;\n}",
+    "not-checked": ".test:not(:checked) {\n  background: #1C1C1E;\n}",
+    "not-disabled": ".test:not(:disabled) {\n  background: #1C1C1E;\n}",
+    "not-first-of-type": ".test:not(:first-of-type) {\n  background: #1C1C1E;\n}",
     "not-last-of-type": ".test:not(:last-of-type) {\n  background: #1C1C1E;\n}",
-    "first": ".test:first-child {\n  background: #1C1C1E;\n}",
-    "last": ".test:last-child {\n  background: #1C1C1E;\n}",
     "not-first": ".test:not(:first-child) {\n  background: #1C1C1E;\n}",
     "not-last": ".test:not(:last-child) {\n  background: #1C1C1E;\n}",
-    "only-child": ".test:only-child {\n  background: #1C1C1E;\n}",
     "not-only-child": ".test:not(:only-child) {\n  background: #1C1C1E;\n}",
-    "only-of-type": ".test:only-of-type {\n  background: #1C1C1E;\n}",
     "not-only-of-type": ".test:not(:only-of-type) {\n  background: #1C1C1E;\n}",
     "even": ".test:nth-child(even) {\n  background: #1C1C1E;\n}",
     "odd": ".test:nth-child(odd) {\n  background: #1C1C1E;\n}",
     "even-of-type": ".test:nth-of-type(even) {\n  background: #1C1C1E;\n}",
     "odd-of-type": ".test:nth-of-type(odd) {\n  background: #1C1C1E;\n}",
-    "root": ".test:root {\n  background: #1C1C1E;\n}",
-    "empty": ".test:empty {\n  background: #1C1C1E;\n}",
     "before": ".test::before {\n  background: #1C1C1E;\n}",
     "after": ".test::after {\n  background: #1C1C1E;\n}",
     "first-letter": ".test::first-letter {\n  background: #1C1C1E;\n}",
@@ -99,7 +99,35 @@ Tools / generate states / all / 0: |-
     "group-active": ".group:active .test {\n  background: #1C1C1E;\n}",
     "group-visited": ".group:visited .test {\n  background: #1C1C1E;\n}",
     "motion-safe": "@media (prefers-reduced-motion: no-preference) {\n  .test {\n    background: #1C1C1E;\n  }\n}",
-    "motion-reduce": "@media (prefers-reduced-motion: reduce) {\n  .test {\n    background: #1C1C1E;\n  }\n}"
+    "motion-reduce": "@media (prefers-reduced-motion: reduce) {\n  .test {\n    background: #1C1C1E;\n  }\n}",
+    "peer-hover": ".peer:hover ~ .test {\n  background: #1C1C1E;\n}",
+    "peer-focus": ".peer:focus ~ .test {\n  background: #1C1C1E;\n}",
+    "peer-active": ".peer:active ~ .test {\n  background: #1C1C1E;\n}",
+    "peer-visited": ".peer:visited ~ .test {\n  background: #1C1C1E;\n}",
+    "peer-link": ".peer:link ~ .test {\n  background: #1C1C1E;\n}",
+    "peer-target": ".peer:target ~ .test {\n  background: #1C1C1E;\n}",
+    "peer-focus-visible": ".peer:focus-visible ~ .test {\n  background: #1C1C1E;\n}",
+    "peer-focus-within": ".peer:focus-within ~ .test {\n  background: #1C1C1E;\n}",
+    "peer-checked": ".peer:checked ~ .test {\n  background: #1C1C1E;\n}",
+    "peer-default": ".peer:default ~ .test {\n  background: #1C1C1E;\n}",
+    "peer-disabled": ".peer:disabled ~ .test {\n  background: #1C1C1E;\n}",
+    "peer-enabled": ".peer:enabled ~ .test {\n  background: #1C1C1E;\n}",
+    "peer-indeterminate": ".peer:indeterminate ~ .test {\n  background: #1C1C1E;\n}",
+    "peer-invalid": ".peer:invalid ~ .test {\n  background: #1C1C1E;\n}",
+    "peer-valid": ".peer:valid ~ .test {\n  background: #1C1C1E;\n}",
+    "peer-optional": ".peer:optional ~ .test {\n  background: #1C1C1E;\n}",
+    "peer-required": ".peer:required ~ .test {\n  background: #1C1C1E;\n}",
+    "peer-placeholder-shown": ".peer:placeholder-shown ~ .test {\n  background: #1C1C1E;\n}",
+    "peer-read-only": ".peer:read-only ~ .test {\n  background: #1C1C1E;\n}",
+    "peer-read-write": ".peer:read-write ~ .test {\n  background: #1C1C1E;\n}",
+    "peer-first-of-type": ".peer:first-of-type ~ .test {\n  background: #1C1C1E;\n}",
+    "peer-last-of-type": ".peer:last-of-type ~ .test {\n  background: #1C1C1E;\n}",
+    "peer-first": ".peer:first ~ .test {\n  background: #1C1C1E;\n}",
+    "peer-last": ".peer:last ~ .test {\n  background: #1C1C1E;\n}",
+    "peer-only-child": ".peer:only-child ~ .test {\n  background: #1C1C1E;\n}",
+    "peer-only-of-type": ".peer:only-of-type ~ .test {\n  background: #1C1C1E;\n}",
+    "peer-root": ".peer:root ~ .test {\n  background: #1C1C1E;\n}",
+    "peer-empty": ".peer:empty ~ .test {\n  background: #1C1C1E;\n}"
   }
 Tools / generate states / some / 1: |-
   {
