fix: :first regression (#778)
Co-authored-by: Anthony Fu <anthonyfu117@hotmail.com>

--- a/test/processor/__snapshots__/variant.test.ts.yml
+++ b/test/processor/__snapshots__/variant.test.ts.yml
@@ -61,8 +61,6 @@ Tools / generate states / all / 0: |-
     "read-write": ".test:read-write {\n  background: #1C1C1E;\n}",
     "first-of-type": ".test:first-of-type {\n  background: #1C1C1E;\n}",
     "last-of-type": ".test:last-of-type {\n  background: #1C1C1E;\n}",
-    "first": ".test:first {\n  background: #1C1C1E;\n}",
-    "last": ".test:last {\n  background: #1C1C1E;\n}",
     "only-child": ".test:only-child {\n  background: #1C1C1E;\n}",
     "only-of-type": ".test:only-of-type {\n  background: #1C1C1E;\n}",
     "root": ".test:root {\n  background: #1C1C1E;\n}",
@@ -71,7 +69,9 @@ Tools / generate states / all / 0: |-
     "not-disabled": ".test:not(:disabled) {\n  background: #1C1C1E;\n}",
     "not-first-of-type": ".test:not(:first-of-type) {\n  background: #1C1C1E;\n}",
     "not-last-of-type": ".test:not(:last-of-type) {\n  background: #1C1C1E;\n}",
+    "first": ".test:first-child {\n  background: #1C1C1E;\n}",
     "not-first": ".test:not(:first-child) {\n  background: #1C1C1E;\n}",
+    "last": ".test:last-child {\n  background: #1C1C1E;\n}",
     "not-last": ".test:not(:last-child) {\n  background: #1C1C1E;\n}",
     "not-only-child": ".test:not(:only-child) {\n  background: #1C1C1E;\n}",
     "not-only-of-type": ".test:not(:only-of-type) {\n  background: #1C1C1E;\n}",
@@ -122,8 +122,6 @@ Tools / generate states / all / 0: |-
     "peer-read-write": ".peer:read-write ~ .test {\n  background: #1C1C1E;\n}",
     "peer-first-of-type": ".peer:first-of-type ~ .test {\n  background: #1C1C1E;\n}",
     "peer-last-of-type": ".peer:last-of-type ~ .test {\n  background: #1C1C1E;\n}",
-    "peer-first": ".peer:first ~ .test {\n  background: #1C1C1E;\n}",
-    "peer-last": ".peer:last ~ .test {\n  background: #1C1C1E;\n}",
     "peer-only-child": ".peer:only-child ~ .test {\n  background: #1C1C1E;\n}",
     "peer-only-of-type": ".peer:only-of-type ~ .test {\n  background: #1C1C1E;\n}",
     "peer-root": ".peer:root ~ .test {\n  background: #1C1C1E;\n}",
