feat: allow all pseudoclasses with group (#781)

--- a/test/processor/__snapshots__/variant.test.ts.yml
+++ b/test/processor/__snapshots__/variant.test.ts.yml
@@ -98,6 +98,28 @@ Tools / generate states / all / 0: |-
     "group-focus": ".group:focus .test {\n  background: #1C1C1E;\n}",
     "group-active": ".group:active .test {\n  background: #1C1C1E;\n}",
     "group-visited": ".group:visited .test {\n  background: #1C1C1E;\n}",
+    "group-link": ".group:link .test {\n  background: #1C1C1E;\n}",
+    "group-target": ".group:target .test {\n  background: #1C1C1E;\n}",
+    "group-focus-visible": ".group:focus-visible .test {\n  background: #1C1C1E;\n}",
+    "group-focus-within": ".group:focus-within .test {\n  background: #1C1C1E;\n}",
+    "group-checked": ".group:checked .test {\n  background: #1C1C1E;\n}",
+    "group-default": ".group:default .test {\n  background: #1C1C1E;\n}",
+    "group-disabled": ".group:disabled .test {\n  background: #1C1C1E;\n}",
+    "group-enabled": ".group:enabled .test {\n  background: #1C1C1E;\n}",
+    "group-indeterminate": ".group:indeterminate .test {\n  background: #1C1C1E;\n}",
+    "group-invalid": ".group:invalid .test {\n  background: #1C1C1E;\n}",
+    "group-valid": ".group:valid .test {\n  background: #1C1C1E;\n}",
+    "group-optional": ".group:optional .test {\n  background: #1C1C1E;\n}",
+    "group-required": ".group:required .test {\n  background: #1C1C1E;\n}",
+    "group-placeholder-shown": ".group:placeholder-shown .test {\n  background: #1C1C1E;\n}",
+    "group-read-only": ".group:read-only .test {\n  background: #1C1C1E;\n}",
+    "group-read-write": ".group:read-write .test {\n  background: #1C1C1E;\n}",
+    "group-first-of-type": ".group:first-of-type .test {\n  background: #1C1C1E;\n}",
+    "group-last-of-type": ".group:last-of-type .test {\n  background: #1C1C1E;\n}",
+    "group-only-child": ".group:only-child .test {\n  background: #1C1C1E;\n}",
+    "group-only-of-type": ".group:only-of-type .test {\n  background: #1C1C1E;\n}",
+    "group-root": ".group:root .test {\n  background: #1C1C1E;\n}",
+    "group-empty": ".group:empty .test {\n  background: #1C1C1E;\n}",
     "motion-safe": "@media (prefers-reduced-motion: no-preference) {\n  .test {\n    background: #1C1C1E;\n  }\n}",
     "motion-reduce": "@media (prefers-reduced-motion: reduce) {\n  .test {\n    background: #1C1C1E;\n  }\n}",
     "peer-hover": ".peer:hover ~ .test {\n  background: #1C1C1E;\n}",
