test: for peer not #798

--- a/test/processor/__snapshots__/variant.test.ts.yml
+++ b/test/processor/__snapshots__/variant.test.ts.yml
@@ -147,7 +147,33 @@ Tools / generate states / all / 0: |-
     "peer-only-child": ".peer:only-child ~ .test {\n  background: #1C1C1E;\n}",
     "peer-only-of-type": ".peer:only-of-type ~ .test {\n  background: #1C1C1E;\n}",
     "peer-root": ".peer:root ~ .test {\n  background: #1C1C1E;\n}",
-    "peer-empty": ".peer:empty ~ .test {\n  background: #1C1C1E;\n}"
+    "peer-empty": ".peer:empty ~ .test {\n  background: #1C1C1E;\n}",
+    "peer-not-hover": ".peer:not(:hover) ~ .test {\n  background: #1C1C1E;\n}",
+    "peer-not-focus": ".peer:not(:focus) ~ .test {\n  background: #1C1C1E;\n}",
+    "peer-not-active": ".peer:not(:active) ~ .test {\n  background: #1C1C1E;\n}",
+    "peer-not-visited": ".peer:not(:visited) ~ .test {\n  background: #1C1C1E;\n}",
+    "peer-not-link": ".peer:not(:link) ~ .test {\n  background: #1C1C1E;\n}",
+    "peer-not-target": ".peer:not(:target) ~ .test {\n  background: #1C1C1E;\n}",
+    "peer-not-focus-visible": ".peer:not(:focus-visible) ~ .test {\n  background: #1C1C1E;\n}",
+    "peer-not-focus-within": ".peer:not(:focus-within) ~ .test {\n  background: #1C1C1E;\n}",
+    "peer-not-checked": ".peer:not(:checked) ~ .test {\n  background: #1C1C1E;\n}",
+    "peer-not-default": ".peer:not(:default) ~ .test {\n  background: #1C1C1E;\n}",
+    "peer-not-disabled": ".peer:not(:disabled) ~ .test {\n  background: #1C1C1E;\n}",
+    "peer-not-enabled": ".peer:not(:enabled) ~ .test {\n  background: #1C1C1E;\n}",
+    "peer-not-indeterminate": ".peer:not(:indeterminate) ~ .test {\n  background: #1C1C1E;\n}",
+    "peer-not-invalid": ".peer:not(:invalid) ~ .test {\n  background: #1C1C1E;\n}",
+    "peer-not-valid": ".peer:not(:valid) ~ .test {\n  background: #1C1C1E;\n}",
+    "peer-not-optional": ".peer:not(:optional) ~ .test {\n  background: #1C1C1E;\n}",
+    "peer-not-required": ".peer:not(:required) ~ .test {\n  background: #1C1C1E;\n}",
+    "peer-not-placeholder-shown": ".peer:not(:placeholder-shown) ~ .test {\n  background: #1C1C1E;\n}",
+    "peer-not-read-only": ".peer:not(:read-only) ~ .test {\n  background: #1C1C1E;\n}",
+    "peer-not-read-write": ".peer:not(:read-write) ~ .test {\n  background: #1C1C1E;\n}",
+    "peer-not-first-of-type": ".peer:not(:first-of-type) ~ .test {\n  background: #1C1C1E;\n}",
+    "peer-not-last-of-type": ".peer:not(:last-of-type) ~ .test {\n  background: #1C1C1E;\n}",
+    "peer-not-only-child": ".peer:not(:only-child) ~ .test {\n  background: #1C1C1E;\n}",
+    "peer-not-only-of-type": ".peer:not(:only-of-type) ~ .test {\n  background: #1C1C1E;\n}",
+    "peer-not-root": ".peer:not(:root) ~ .test {\n  background: #1C1C1E;\n}",
+    "peer-not-empty": ".peer:not(:empty) ~ .test {\n  background: #1C1C1E;\n}"
   }
 Tools / generate states / some / 1: |-
   {
